--- a/cv.html
+++ b/cv.html
@@ -44,7 +44,7 @@
           <a class="nav-link js-scroll-trigger" href="workexperience.html">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
+          <a class="nav-link js-scroll-trigger" href="Education.html">Education</a>
         </li>
        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="index.php">Main Menu</a>
